update readme.md file

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 PG_USER=postgres
 PG_HOST=localhost
 PG_DATABASE=node_db
-PG_PASSWORD=1234
+PG_PASSWORD=password # Your password
 PG_PORT=5432
 
 JWT_SECRET=secret # You can use different secret for access token
